# Binoculars-T4-gpu

./: README.md  inference.py  pyproject.toml  requirements.txt  setup.py
ai_gen_text/: __init__.py  detector.py
experimental/: __init__.py  core.py  falcon_a100_binoculars.py  falcon_t4_binoculars.py  inference.py
